fixing button size and alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 .App {
-  padding: 25vh;
+  padding: 15vw;
   align-items: center;
   display: flex;
   flex-wrap: wrap;
   flex: 1;
   flex-direction: row-reverse;
-  justify-content: center;
   flex-wrap: wrap;
   flex-shrink: 1;
 }
@@ -13,7 +12,7 @@
 .Desc {
   text-align: center;
   align-content: center;
-  font-size: 5ch;
+  font-size: 4vw;
   font-size-adjust: inherit;
 }
 
